# quakstore

./: .gitignore  LICENSE  README.md  build.sh  pyproject.toml  requirements.txt
.VSCodeCounter/2024-11-10_09-03-21/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
QuakStore/: manage.py  pytest.ini
QuakStore/QuakStore/: asgi.py  settings.py  urls.py  wsgi.py
QuakStore/cart/: admin.py  models.py  serializers.py  urls.py  views.py
QuakStore/cart/migrations/: 0001_initial.py  0002_cartitem_user_cartitem_unique_user_product.py  0002_initial.py  0003_alter_cartitem_date_added_and_more.py  0003_alter_cartitem_product.py  0004_alter_cartitem_options_alter_cartitem_product_and_more.py  0005_cartitem_unique_user_product.py
QuakStore/common/: throttles.py  utils.py
QuakStore/favorites/: admin.py  models.py  serializers.py  urls.py  views.py
QuakStore/favorites/migrations/: 0001_initial.py  0002_alter_favorite_product_alter_favorite_user_and_more.py
QuakStore/orders/: admin.py  dto.py  models.py  serializers.py  urls.py  views.py
QuakStore/orders/migrations/: 0001_initial.py  0002_alter_orderitem_quantity.py  0005_order_uuid.py  (+4 more)
QuakStore/payment/: admin.py  apps.py  exceptions.py  models.py  serializers.py  services.py  signals.py  urls.py  utils.py  views.py  webhooks_urls.py
QuakStore/product/: admin.py  models.py  serializers.py  urls.py  validators.py  views.py
QuakStore/reviews/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
QuakStore/users/: admin.py  models.py  serializers.py
(+33 files in other folders)
